--- a/journalapp/templates/blog_detail.jinja2
+++ b/journalapp/templates/blog_detail.jinja2
@@ -1,8 +1,24 @@
 {# detail view #}
 {% extends "blog_base.jinja2"  %}
 {%  block show_item %}
-{#    <p>In: Blog_detail id passed:</p>#}
-{#    <p>{{ post }}</p>#}
-    <p>{{ post["posts"][0].title }}</p>
-    <p>{{ post["posts"][0].text }}</p>
+<article class="box post post-excerpt">
+    <header>
+        <h2><a href="#">{{ post["posts"][0].title }}</a></h2>
+{#        <p>Feugiat interdum sed commodo ipsum consequat dolor nullam metus</p>#}
+    </header>
+    <div class="info">
+        <span class="date"><span class="month">Jul<span>y</span></span> <span class="day">8</span><span class="year">, 2014</span></span>
+        <ul class="stats">
+            <li><a href="#" class="icon fa-comment">16</a></li>
+            <li><a href="#" class="icon fa-heart">32</a></li>
+            <li><a href="#" class="icon fa-twitter">64</a></li>
+            <li><a href="#" class="icon fa-facebook">128</a></li>
+        </ul>
+    </div>
+    <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+    <p>
+        {{ post["posts"][0].text }}
+    </p>
+</article>
+
 {% endblock %}
