--- a/journalapp/templates/blog_login.jinja2
+++ b/journalapp/templates/blog_login.jinja2
@@ -1,16 +1,16 @@
 {% extends "blog_base.jinja2" %}
 {% block show_item %}
-    <h2>Edit Post</h2>
+    <h2>Login</h2>
     {% if error -%}
         <p class="error"><strong>Error</strong>: {{ error }}
     {%- endif %}
     <form action="" method="POST">
         <div class="field">
-            <label for="title">Edit Title</label>
+            <label for="title">User Name</label>
             {{ form.title() | markdown | safe }}
         </div>
         <div class="field">
-            <label for="Content">Edit Content</label>
+            <label for="Content">Password</label>
             {{ form.text() | markdown | safe }}
         </div>
         <div class="submit">
