Added in some filters for getting month as word Updated templates to only show month and day

--- a/journalapp/templates/blog_detail.jinja2
+++ b/journalapp/templates/blog_detail.jinja2
@@ -9,9 +9,9 @@
         </header>
         <div class="info">
             <span class="date">
-                {{ post.created }}
-{#                <span class="month">{{ post.created }}<span></span>y</span>#}
-{#                <span class="day">{{ post.created }}</span>#}
+{#                {{ post.created }}#}
+                <span class="month">{{ post.created | dateformat_monthfull }}</span>
+                <span class="day">{{ post.created | dateformat_day }}</span>
 {#                <span class="year">, {{ post.created }}</span>#}
             </span>
 {#            <ul class="stats">#}
