--- a/journalapp/templates/blog_base.jinja2
+++ b/journalapp/templates/blog_base.jinja2
@@ -55,6 +55,7 @@
 						<ul>
 							<li class="current"><a href="{{ request.route_url('home')}}">Home</a></li>
 							<li><a href="{{ request.route_url('login') }}">login</a></li>
+                            <li><a href="{{ request.route_url('logout') }}">logout</a></li>
 							<li><a href="{{ request.route_url('new') }}">New</a></li>
 						</ul>
 					</nav>
