--- a/journalapp/templates/blog_base.jinja2
+++ b/journalapp/templates/blog_base.jinja2
@@ -54,10 +54,11 @@
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="{{ request.route_url('home')}}">Home</a></li>
-							<li><a href="{{ request.route_url('login') }}">login</a></li>
-                            {% if request.has_permisison %}
-                            <li><a href="{{ request.route_url('logout') }}">logout</a></li>
-							<li><a href="{{ request.route_url('new') }}">New</a></li>
+                            {% if request.has_permission("SecretUser", None) %}
+                                <li><a href="{{ request.route_url('logout') }}">logout</a></li>
+							    <li><a href="{{ request.route_url('new') }}">New</a></li>
+                            {% else %}
+                                <li><a href="{{ request.route_url('login') }}">login</a></li>
                             {% endif %}
 						</ul>
 					</nav>
