Revised home.jinja2 to include markdown | safe

--- a/journalapp/templates/blog_home.jinja2
+++ b/journalapp/templates/blog_home.jinja2
@@ -38,7 +38,7 @@
             </div>
 {#            <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>#}
             <p>
-                {{ post.text }}
+                {{ post.text | markdown | safe  }}
             </p>
         </article>
     {% endfor %}
